# BoothHunter-ex

./: README.md  index.html  package-lock.json  package.json
docs/: USER_GUIDE.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: config.rs  database.rs  error.rs  lib.rs
src-tauri/src/commands/: collections.rs  filesystem.rs  mod.rs  settings.rs
src/components/common/: LanguageSelector.tsx  Pagination.tsx
src/components/favorites/: AddToCollectionMenu.tsx  CollectionSidebar.tsx  FavoritesList.tsx  TagEditor.tsx
src/components/layout/: BottomTabBar.tsx  CategorySheet.tsx  Sidebar.tsx
src/components/search/: FilterPanel.tsx  ItemCard.tsx  SearchResults.tsx
src/components/settings/: AutoCollectionManager.tsx  DataManagementSection.tsx
src/hooks/: useCollections.ts  useFavorites.ts
src/lib/: booth-api.ts  settings.ts
src/lib/i18n/: en.ts  ko.ts  types.ts
src/pages/: FavoritesPage.tsx  ItemDetailPage.tsx  SearchPage.tsx  SettingsPage.tsx  StatsPage.tsx
