[package]
name = "app"
version = "1.0.1"
description = "BoothHunter-ex - Booth.pm VRChat 상품 검색"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "~2.10", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
thiserror = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2.5.3"
dirs = "6.0.0"
sanitize-filename = "0.6.0"
open = "5.3.3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
